# auditree-plant

./: .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: new-collaborator.md
plant/: __init__.py  cli.py  locker.py
test/: __init__.py  test_cli.py  test_plant_locker.py
test/fixtures/: faux_config.json  faux_creds.ini  faux_git_config.json
