[metadata]
name = auditree_plant
version = attr: plant.__version__
description = The Auditree tool for adding external evidence
author = Auditree Security and Compliance
author_email = al.finkelstein@ibm.com
url = https://github.com/ComplianceAsCode/auditree-plant
license = IBM internal use
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = https://github.com/ComplianceAsCode/auditree-plant

[options]
packages = find:
install_requires =
    compliance-tool>=0.44.2
    ilcli>=0.2.3
    utilitarian>=0.44.6

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    pre-commit>=2.4.0
    pytest>=4.4.1
    pytest-cov>=2.6.1
    recommonmark
    Sphinx>=1.7.2

[options.entry_points]
console_scripts =
    plant=plant.cli:run
